--- a/cap06/ex6_1.html
+++ b/cap06/ex6_1.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="https://m.media-amazon.com/images/I/71X7hMhMEUL._SY425_.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="cap06/css/ex6_1.css">
+    <link rel="stylesheet" href="cap06/css/styles.css">
     <title>Exercicio 6.1</title>
 </head>
 
