--- a/cap07/ex7_6.html
+++ b/cap07/ex7_6.html
@@ -8,24 +8,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Exercício 7.5</title>
+    <title>Exercício 7.6</title>
 </head>
 
 <body>
     <div class="container">
-        <h1>Programa E-mail Institucional</h1>
+        <h1>Programa Valida Senha</h1>
         <form action="">
             <div class="row gx-2 mb-3">
                 <div class="col-auto">
-                    <label for="inFuncionario">Funcionário: </label>
+                    <label for="inSenha">Senha: </label>
                 </div>
                 <div class="col">
-                    <input type="text" id="inFuncionario" autofocus required>
-                    <input type="submit" value="Gerar E-mail">
+                    <input type="text" id="inSenha" autofocus required>
+                    <input type="submit" value="Verificar Validade">
                 </div>
             </div>
         </form>
-        <h3>E-mail: <span></span></h3>
+        <h3></h3>
     </div>
 
 
@@ -34,7 +34,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
-    <script src="js/ex7_5.js"></script>
+    <script src="js/ex7_6.js"></script>
 </body>
 
 </html>
