Inclusão de exercícios/respostas finais do capítulo 9

--- a/cap09/ex9_1.html
+++ b/cap09/ex9_1.html
@@ -15,6 +15,7 @@
     <div class="container-fluid">
         <div class="row" id="divTitulo">
             <div class="col-sm-7">
+                <p id="visitas"></p>
                 <h1>Loja de Esportes Avenida</h1>
                 <h2>Produtos esportivos em geral</h2>
             </div>
